--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@geometerio/pogo",
+  "name": "@vex-dev/typescript-sdk",
   "version": "1.0.19",
   "repository": {
     "type": "git",
-    "url": "https://github.com/geometerio/pogo.git"
+    "url": "https://github.com/vex-dev/typescript-sdk.git"
   },
   "description": "",
   "dependencies": {
