--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vex-dev/typescript-sdk",
-  "version": "1.0.22",
+  "version": "1.0.23",
   "repository": {
     "type": "git",
     "url": "https://github.com/vex-dev/typescript-sdk.git"
@@ -9,11 +9,19 @@
   "dependencies": {
     "phoenix": "1.6.7"
   },
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "/dist",
+    "/src"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "MIT",
+  "devDependencies": {
+    "typescript": "^4.8.3"
+  }
 }
